# stream-recorder

./: .env.example  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: auth.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  monitoring.rs  recovery.rs  rooms.rs  storage.rs
backend/src/handlers/: analytics.rs  auth.rs  mod.rs  room.rs  stream.rs
docker/: Dockerfile  docker-compose.yml
docker/grafana/provisioning/dashboards/: stream-recorder.json
docker/prometheus/: prometheus.yml
docs/: api.md  embedded.md
examples/web-client/: README.md  package-lock.json  package.json  webpack.config.js
examples/web-client/public/: index.html
examples/web-client/src/: App.tsx  api.ts  index.tsx
examples/web-client/src/components/: Auth.tsx  Room.tsx  RoomList.tsx  StreamRecorder.tsx
postman/: Stream-Recorder.postman_collection.json
scripts/: setup.sh
src/handlers/: analytics.rs  room.rs  stream.rs
