[package]
name = "stream-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["ws", "headers"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
jwt = "0.16"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust-s3 = "0.33"
futures = "0.3"
bytes = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
async-stream = "0.3"
tokio-stream = "0.1"
webrtc = "0.7"
image = "0.24" 