[package]
name = "stream-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.6", features = ["ws", "headers"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["trace", "cors", "compression-gzip", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["serde", "v4"] }
futures = "0.3"
futures-util = "0.3"
sys-info = "0.9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] } 